--- a/Oh-Gili/GoogleService-Info.plist
+++ b/Oh-Gili/GoogleService-Info.plist
@@ -3,9 +3,9 @@
 <plist version="1.0">
 <dict>
 	<key>CLIENT_ID</key>
-	<string>247657162469-jkn66a21j75796vtm673ns6e0lca1u5d.apps.googleusercontent.com</string>
+	<string>247657162469-50p4d2rfqtaf9tur5nlhe7bi3s2cq76t.apps.googleusercontent.com</string>
 	<key>REVERSED_CLIENT_ID</key>
-	<string>com.googleusercontent.apps.247657162469-jkn66a21j75796vtm673ns6e0lca1u5d</string>
+	<string>com.googleusercontent.apps.247657162469-50p4d2rfqtaf9tur5nlhe7bi3s2cq76t</string>
 	<key>API_KEY</key>
 	<string>AIzaSyAyuRi9uQhtyqxyLzt9A-R5SCbe-tgS9Yw</string>
 	<key>GCM_SENDER_ID</key>
@@ -13,7 +13,7 @@
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
-	<string>jp.tomokazu.takahashi.Oh-Gili</string>
+	<string>jp.tomokazu.takahashi.OhGili</string>
 	<key>PROJECT_ID</key>
 	<string>oh-gili-dde20</string>
 	<key>STORAGE_BUCKET</key>
@@ -29,7 +29,7 @@
 	<key>IS_SIGNIN_ENABLED</key>
 	<true></true>
 	<key>GOOGLE_APP_ID</key>
-	<string>1:247657162469:ios:22d88afb6679066385960c</string>
+	<string>1:247657162469:ios:e232c0f6f1ce980585960c</string>
 	<key>DATABASE_URL</key>
 	<string>https://oh-gili-dde20.firebaseio.com</string>
 </dict>
